compiler/tests/should-fail/UnknownMethod2.via
/* UnknownMethodError */

process main {
    var x: bool = false;
    x += 42;
}
